--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>2.1.210</version>
-            <scope>compile</scope>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -93,6 +93,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>2.6.3</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.6.1</version>
         </dependency>
 
     </dependencies>
