--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.port=8080
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
-spring.datasource.url=jdbc:h2:mem:memDb;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:memDb
+#;DB_CLOSE_DELAY=-1
 #spring.datasource.url=jdbc:h2:file:./data/fileDb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -15,4 +16,5 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.generate-unique-name=true
 
